fixed white space when scrolling books

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,10 +30,15 @@
     float: left;
 }
 
-/*Styling Elements such as padding etc*/
+/*Styling Elements*/
 
 .margin {
     margin-bottom: 10px;
+}
+.navbar {
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 
 .padding {
@@ -60,7 +65,7 @@
     margin: 2rem;
 }
 
-/*Cards*/
+/*cards*/
 .card {
     background-color: rgba(192, 192, 192, 0.8)
 }
